<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearActivityEstablecimiento">


 <LinearLayout
     android:id="@+id/register_house"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"

     android:padding="@dimen/commo_padding_default">

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/titulo_establecimiento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/name_house"
         app:endIconMode="clear_text"
         android:maxLength="@integer/counter_max_line"
         app:counterEnabled="true"
         app:startIconDrawable="@drawable/ic_house"
         app:helperText="@string/helper_requirer"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">>

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_establecimiento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="@integer/counter_max_line"
             android:inputType="textCapWords"/>
     </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/titulo_localizacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/name_locale"
         app:endIconMode="clear_text"
         android:maxLength="@integer/counter_max_line"
         app:counterEnabled="true"
         app:startIconDrawable="@drawable/ic_map"
         app:helperText="@string/helper_requirer"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">>

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_localizacionlugar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="@integer/counter_max_line"
             android:inputType="textCapWords"/>
     </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/titulo_precio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/name_price"
         app:endIconMode="clear_text"
         android:maxLength="@integer/counter_max_line"
         app:counterEnabled="true"
         app:startIconDrawable="@drawable/ic_money"
         app:helperText="@string/helper_requirer"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">>

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_preciolugar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="@integer/counter_max_line"
             android:inputType="textCapWords"/>
     </com.google.android.material.textfield.TextInputLayout>

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/titulo_fecha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/name_date"
         app:endIconMode="clear_text"
         android:maxLength="@integer/counter_max_line"
         app:counterEnabled="true"
         app:startIconDrawable="@drawable/ic_date"
         app:helperText="@string/helper_requirer"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">>

         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_fechalugar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="@integer/counter_max_line"
             android:inputType="textCapWords"/>
     </com.google.android.material.textfield.TextInputLayout>


     <TextView
         android:id="@+id/Disponibilidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/commo_padding_default"
         android:paddingHorizontal="@dimen/commo_padding_default"
         android:text="Disponibilidad:" />

     <Spinner
         android:id="@+id/mySpinner"
         android:hint="@string/tipe_esta"
         android:layout_marginTop="@dimen/commo_padding_min"
         app:endIconMode="clear_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <TextView
         android:id="@+id/TipoLugar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/commo_padding_default"
         android:paddingHorizontal="@dimen/commo_padding_default"
         android:text="Tipo de lugar:" />

     <Spinner
         android:id="@+id/mySpinner1"
         android:hint="@string/tipe_esta"
         android:layout_marginTop="@dimen/commo_padding_min"
         app:endIconMode="clear_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <Button
         android:id="@+id/btn_registarlugar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/registrarse_lugar"
         android:clickable="true"
         android:paddingTop="@dimen/commo_padding_default"
         android:layout_marginTop="@dimen/commo_padding_default"
         android:layout_marginHorizontal="@dimen/commo_padding_default"
         android:backgroundTint="#03D3DA"
         app:layout_constraintTop_toBottomOf="@+id/login_complete"/>


 </LinearLayout>


</RelativeLayout>